Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(Number var)
    end
end
